--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "all type file preview",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,5 +13,8 @@
     "preview"
   ],
   "author": "SmallTeddy",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "node": "^21.2.0"
+  }
 }
